Potential fix for horizontal overflow

--- a/src/assets/scss/main/blocks/_divider.scss
+++ b/src/assets/scss/main/blocks/_divider.scss
@@ -2,6 +2,7 @@
   bottom: 100%;
   position: absolute;
   width: 100%;
+  overflow: hidden;
 
   svg {
     display: block;
